syntax = "proto3";
package rony;
option go_package = ".;rony";

// MessageEnvelope
// This type of message will be used to contain another ProtoBuffer Message inside
message MessageEnvelope {
    int64 Constructor = 1;
    fixed64 RequestID = 2;
    bytes Auth = 3;
    bytes Message = 4;
}

// MessageContainer
// This type of message will be used to send multi messages inside a single container message
message MessageContainer {
    int32 Length = 1;
    repeated MessageEnvelope Envelopes = 2;
}

// Error
message Error {
    string Code = 1;
    string Items = 2;
    string Template = 3;
    repeated string TemplateItems = 4;
    string LocalTemplate = 5;
    repeated string LocalTemplateItems = 6;
}

// Redirect
message Redirect {
    repeated string LeaderHostPort = 1;
    string ServerID = 2;
}

// KeyValue
message KeyValue {
    string Key = 1;
    string Value = 2;
}

// ClusterMessage
message ClusterMessage {
    bytes Sender = 1;
    repeated KeyValue Store = 2;
    MessageEnvelope Envelope = 3;
}

// RaftCommand
message RaftCommand {
    bytes Sender = 1;
    repeated KeyValue Store = 2;
    MessageEnvelope Envelope = 3;
}

enum RaftState {
    None = 0;
    Follower = 1;
    Candidate = 2;
    Leader = 3;
    Shutdown = 4;
}

// EdgeNode
message EdgeNode {
    bytes ServerID = 1;
    uint64 ReplicaSet = 2;
    uint64 ShardSet = 3;
    uint32 RaftPort = 4;
    RaftState RaftState = 5;
    repeated string GatewayAddr = 6;

}
